Revert "Fix permalink image alignement in daily page"
This reverts commit bae408fa98a30852f737c2dd26cdc0fff2bc87d3.

--- a/tpl/default/css/shaarli.css
+++ b/tpl/default/css/shaarli.css
@@ -803,10 +803,6 @@ div.dailyAbout img {
     height: 14px;
 }
 
-div.dailyEntryPermalink {
-    float: right;
-}
-
 div.dailyTitle {
     font-weight: bold;
     font-size: 44pt;
